Fixed styling on horizontal scrollbars
Note: There really shouldn't be any horizontal scrollbars, but I'll leave this here until I figure out why they're showing up and how to stop it.

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ div#container
 ::-webkit-scrollbar
 {
 	width: 6px;
+	height: 6px;
 	/*background-color: #f5f5f5;*/
 }
 
